--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/java/com/lmpjt/pilotpjt/dto/UserDTO.java=UTF-8
+encoding//src/main/webapp/resources/css/book_search.css=UTF-8
