중복로그인, 아이디&비번 틀림처리

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,9 @@
 		<listener-class>com.lmpjt.pilotpjt.controller.util.SessionTrackerListener
 		</listener-class>
 	</listener>
+	<listener>
+		<listener-class>com.lmpjt.pilotpjt.controller.util.ServerStartupListener</listener-class>
+	</listener>
 
 	<!-- Processes application requests -->
 	<servlet>
