--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,6 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
 	</context-param>
-
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener
@@ -26,9 +25,9 @@
 		</listener-class>
 	</listener>
 	<listener>
-		<listener-class>com.lmpjt.pilotpjt.controller.util.ServerStartupListener</listener-class>
+		<listener-class>com.lmpjt.pilotpjt.controller.util.ServerStartupListener
+		</listener-class>
 	</listener>
-
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
